--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
 <BODY>
-<h2>Some Beautiful paths can't be discovered without getting lost.</h2>
-  <img src ="https://nandinibkt1.s3.ap-south-1.amazonaws.com/Path.jpg" >
+<h2>"The way I see it, if you want the rainbow you gotta put up with the rain."</h2>
+  <img src ="https://oshin8858.s3.ap-south-1.amazonaws.com/oshin.jpg" >
   </BODY>
 </HTML>
